k8s/overlays/prod/patches/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nps
  namespace: nps
spec:
  replicas: 3
  template:
    spec:
      containers:
        - name: nps
          image: marcushellberg/nps:latest
          imagePullPolicy: Always
